--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Possibly the most insightful presentation of all time" />
 
     <link rel="stylesheet" href="decky.css">
-    <link rel="stylesheet" href="solarized-dark.css">
+    <link rel="stylesheet" href="tomorrow-night-blue.css">
     <script src="highlight.min.js"></script>
   </head>
   <body>
@@ -33,11 +33,57 @@
     </section>
 
     <section>
+      <img src="img/quantum-suit.jpg" class="cover">
+      <h1 style="text-shadow: 0 0 .5em #004, 0 0 1em #004, 0 0 .2em #004; margin-top: 30vh;">
+        <div style="font-weight: 600;">
+          <i style="color:rgba(255,255,255,.3)">57</i>
+          <i style="color:rgba(255,255,255,.5)">58</i>
+          <i style="color:rgba(255,255,255,.7)">59</i>
+          <i style="color:rgba(255,255,255,.9)">60</i>
+          <i style="color:rgba(255,255,255,1); text-shadow:0 0 .2em #00f, 0 0 .5em #00f;">61</i>
+        </div>
+      </h1>
+    </section>
+
+    <style>
+      .quantum {
+        text-align: left;
+        font-size: 1.4em;
+      }
+      .quantum span {
+        font-weight: 300;
+        color: rgba(255,255,255,.6);
+      }
+      .quantum . {
+
+      }
+    </style>
+
+    <section>
+      <div class="quantum">
+        <div><span>Quantum</span> Flow <b hide>✅</b></div>
+        <div><span>Quantum</span> DOM <b hide>✅</b></div>
+        <div><span>Quantum</span> CSS <b hide>✅</b></div>
+        <div><span>Quantum</span> Render</div>
+      </div>
+    </section>
+
+    <section>
+      <div class="quantum">
+        <div><span>Quantum</span> Flow <b>✅</b></div>
+        <div><span>Quantum</span> DOM <b>✅</b></div>
+        <div><span>Quantum</span> CSS <b>✅</b></div>
+        <div><span>Quantum</span> <span>Render</span></div>
+      </div>
+    </section>
+
+    <section>
       <h2>Web Authentication</h2>
     </section>
 
     <section>
       <h2>ES Modules</h2>
+      <pre><code>import { modules } from 'future.js';</code></pre>
     </section>
 
     <section>
@@ -138,18 +184,15 @@
     </section>
 
     <section>
+      <h1>GeckoView</h1>
+    </section>
+
+    <section>
+      <h2>Quantum Render</h2>
+    </section>
+
+    <section>
       <img src="img/firefox-reality.png">
-    </section>
-
-    <section>
-      <h1>WebRender</h1>
-    </section>
-
-    <section>
-      <h1>WebRender</h1>
-      <div style="color:red;font-family:monospace;position:absolute;top:calc(var(--slide-height)*.45);left:calc(var(--slide-width)*.5);transform:translate(-50%,-50%) rotate(-20deg);font-size: 8rem;font-weight:bold;-webkit-text-stroke:.1em #000;paint-order:stroke fill;">
-        SOON
-      </div>
     </section>
 
     <section>
